# internal/models/user.go
@@ -2,16 +2,13 @@ package models
 
 import (
 	"errors"
-	"time"
 )
 
 type User struct {
 	UserId           int    `gorm:"primaryKey" json:"userId"`
 	Login            string `json:"login" binding:"required,max=64"`
 	IsAdmin          bool   `json:"isAdmin" gorm:"column:is_moderator"`
-	Name             string `json:"name,omitempty"`
 	Password         string `json:"password,omitempty" binding:"required,min=8,max=64"`
-	RegistrationDate time.Time
 }
 
 type UserLogin struct {
